{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 589,
  "lineage": "983ead89-eb2f-18cf-c28c-26a38bb45897",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:internet-gateway/igw-0b2e11c9bf2ecfa51",
            "id": "igw-0b2e11c9bf2ecfa51",
            "owner_id": "597647611698",
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:loadbalancer/app/app-lb/c970d5e8d6b5df6d",
            "arn_suffix": "app/app-lb/c970d5e8d6b5df6d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-69343209.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:597647611698:loadbalancer/app/app-lb/c970d5e8d6b5df6d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fb8c13a7f5ad93d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00a31518fb18aeb6d"
              },
              {
                "subnet_id": "subnet-0a89384f3ae002a3b"
              }
            ],
            "subnets": [
              "subnet-00a31518fb18aeb6d",
              "subnet-0a89384f3ae002a3b"
            ],
            "vpc_id": "vpc-063913eb767c89a45",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.app_public_subnet_1",
            "aws_subnet.app_public_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:listener/app/app-lb/c970d5e8d6b5df6d/8828c47d139bfe19",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:597647611698:listener/app/app-lb/c970d5e8d6b5df6d/8828c47d139bfe19",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:loadbalancer/app/app-lb/c970d5e8d6b5df6d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_security_group.alb_security_group",
            "aws_subnet.app_public_subnet_1",
            "aws_subnet.app_public_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:targetgroup/app-tg/c37844b9627ecb06",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:listener-rule/app/app-lb/c970d5e8d6b5df6d/8828c47d139bfe19/e1eb8bac623bc721",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/app/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:597647611698:listener-rule/app/app-lb/c970d5e8d6b5df6d/8828c47d139bfe19/e1eb8bac623bc721",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:listener/app/app-lb/c970d5e8d6b5df6d/8828c47d139bfe19",
            "priority": 20,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_listener.app_lb_listener",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_security_group",
            "aws_subnet.app_public_subnet_1",
            "aws_subnet.app_public_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:targetgroup/web-tg/0acbefc1dea4697d",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:listener-rule/app/app-lb/c970d5e8d6b5df6d/8828c47d139bfe19/a0f855b41b5c8ca3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/web/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:597647611698:listener-rule/app/app-lb/c970d5e8d6b5df6d/8828c47d139bfe19/a0f855b41b5c8ca3",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:listener/app/app-lb/c970d5e8d6b5df6d/8828c47d139bfe19",
            "priority": 10,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_listener.app_lb_listener",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_security_group",
            "aws_subnet.app_public_subnet_1",
            "aws_subnet.app_public_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:targetgroup/app-tg/c37844b9627ecb06",
            "arn_suffix": "targetgroup/app-tg/c37844b9627ecb06",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:597647611698:targetgroup/app-tg/c37844b9627ecb06",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:597647611698:loadbalancer/app/app-lb/c970d5e8d6b5df6d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:597647611698:targetgroup/web-tg/0acbefc1dea4697d",
            "arn_suffix": "targetgroup/web-tg/0acbefc1dea4697d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:597647611698:targetgroup/web-tg/0acbefc1dea4697d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:597647611698:loadbalancer/app/app-lb/c970d5e8d6b5df6d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 4200,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:route-table/rtb-089c873fb48dea814",
            "id": "rtb-089c873fb48dea814",
            "owner_id": "597647611698",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:route-table/rtb-04234dc7bc766d495",
            "id": "rtb-04234dc7bc766d495",
            "owner_id": "597647611698",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2e11c9bf2ecfa51",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_asso_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09871b0cd96d61c65",
            "route_table_id": "rtb-089c873fb48dea814",
            "subnet_id": "subnet-0eddd25d4198a6570"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.app_private_subnet_1",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_asso_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069b6671db11d5449",
            "route_table_id": "rtb-089c873fb48dea814",
            "subnet_id": "subnet-0552914bb0e5e69be"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.app_private_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_asso_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000d157bfed4a942d",
            "route_table_id": "rtb-04234dc7bc766d495",
            "subnet_id": "subnet-00a31518fb18aeb6d"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_rt",
            "aws_subnet.app_public_subnet_1",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_asso_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5a8af2bc8617508",
            "route_table_id": "rtb-04234dc7bc766d495",
            "subnet_id": "subnet-0a89384f3ae002a3b"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.public_rt",
            "aws_subnet.app_public_subnet_2",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:security-group/sg-0fb8c13a7f5ad93d5",
            "description": "Allow HTTP and HTTPS for World",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fb8c13a7f5ad93d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241101153125682200000002",
            "name_prefix": "terraform-",
            "owner_id": "597647611698",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load balancer security group"
            },
            "tags_all": {
              "Name": "Load balancer security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:security-group/sg-0f7f8992e596ab65d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7f8992e596ab65d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0781f3d96c4f1229d"
                ],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0781f3d96c4f1229d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20241101153131959400000005",
            "name_prefix": "terraform-",
            "owner_id": "597647611698",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.web_sg",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:security-group/sg-0781f3d96c4f1229d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0781f3d96c4f1229d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb8c13a7f5ad93d5"
                ],
                "self": false,
                "to_port": 4200
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fb8c13a7f5ad93d5"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241101153128943600000004",
            "name_prefix": "terraform-",
            "owner_id": "597647611698",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-0eddd25d4198a6570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eddd25d4198a6570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-0552914bb0e5e69be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0552914bb0e5e69be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-00a31518fb18aeb6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a31518fb18aeb6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:subnet/subnet-0a89384f3ae002a3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a89384f3ae002a3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597647611698",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-063913eb767c89a45"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:597647611698:vpc/vpc-063913eb767c89a45",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e201c764568d5178",
            "default_route_table_id": "rtb-07ff138938803a8de",
            "default_security_group_id": "sg-067f2af432f08a06b",
            "dhcp_options_id": "dopt-015a245ee1d217a01",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063913eb767c89a45",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07ff138938803a8de",
            "owner_id": "597647611698"
          }
        }
      ]
    }
  ]
}